# Add-Drop-Goto

./: .ADG.swp  .adg.swo  .adg.swp  ADG  Cargo.toml  README.md  adg  adg.fish  adg.py  adg.sh  autoComplete.py  changeNotes  findFunctions.sh  install.sh  other  parseArgs  parser.py  test.sh  waypoints.ini  waypoints.json  waypoints.txt
src/: add  clear  drop  goto  main.rs  readWayPoints  rename  waypoints.rs  writeWayPoints
