[package]
name = "adg"
version = "0.1.0"
authors = ["TylerBloom <tylerbloom2222@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
home = { version = "0.5.0" }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = { version = "1.0.68" }
